# research

./: README.md
helm-fuzzer/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TESTING.md  go.mod  go.sum  install.sh  main.go  plugin.yaml  shell.nix
helm-fuzzer/cmd/: fuzz.go  root.go
helm-fuzzer/pkg/config/: config.go  config_test.go
helm-fuzzer/pkg/generator/: generator.go  generator_test.go
helm-fuzzer/pkg/generator/testdata/rapid/TestGenerateStringWithConstraints/: TestGenerateStringWithConstraints-20251120152417-3039.fail
helm-fuzzer/pkg/runner/: deduplicator.go  minimizer.go  oracle.go  oracle_test.go  runner.go
helm-fuzzer/pkg/schema/: infer.go  infer_test.go  jsonschema.go  types.go
helm-fuzzer/pkg/tui/: tui.go
helm-fuzzer/testdata/buggy-chart/: Chart.yaml  values.yaml
helm-fuzzer/testdata/buggy-chart/templates/: deployment.yaml
vibethinker/: main.py
youtube_knowledge/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
youtube_knowledge/tests/: README.md  __init__.py  conftest.py  test_models.py  test_playlist.py  test_transcript.py  test_transform.py  test_uploader.py
youtube_knowledge/youtube_knowledge/: __init__.py  __main__.py  chat.py  cli.py  models.py  playlist.py  state.py  transcript.py  transform.py  uploader.py
